# spyglass-project-template

./: .gitignore  README.md  environment.yml  pyproject.toml
src/package-name/: plotting.py
src/package-name/tests/: .gitkeep
workflows/: test_package_build.yml
